updated anil sir code

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ JWT_SECRET="wingsFly"
 JWT_AD_SECRET="admin-logging"
 JWT_TIMEOUT_DURATION="64000000"
 
-// >>>>>>>>>>>>>>>>>>developmentdddd
+# // >>>>>>>>>>>>>>>>>>developmentdddd
 
   #  LOCALDB = "mongodb+srv://gcdmdistribution:hycySezyRTymepVz@music.d2bqw.mongodb.net/musicDB?retryWrites=true&w=majority&appName=Music"
  
@@ -11,9 +11,11 @@ JWT_TIMEOUT_DURATION="64000000"
   #   CLOUDINARY_API_SECRET =LmnHhB5Ug7xfCy_dIR3MWBsMk5o
 
 
-  // >>>>>>>>>>>>>>>>>>production
+  # // >>>>>>>>>>>>>>>>>>production
   LOCALDB="mongodb+srv://j2pentertainmentdigitalpvtltd:gqYHfdNrK41t2z0y@music.qsly5.mongodb.net/?retryWrites=true&w=majority&appName=music"
   
+# mongodump --uri="mongodb+srv://j2pentertainmentdigitalpvtltd:gqYHfdNrK41t2z0y@music.qsly5.mongodb.net" --out=./mongo-backup
+
 
   CLOUDINARY_NAME =daydvcydg
   CLOUDINARY_API_KEY =211215763429816
